[gd_scene load_steps=3 format=3 uid="uid://blr2me0gfror6"]

[ext_resource type="PackedScene" uid="uid://cuokuu6chraw8" path="res://mapas/GraphNode.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/mapas/GraphEdit.gd" id="2"]

[node name="GraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource("2")

[node name="GraphNode2" parent="." instance=ExtResource("1")]
layout_mode = 0
offset_right = 318.0
offset_bottom = 212.0
scale = Vector2(1, 1)
mouse_filter = 1

[node name="GraphNode" type="GraphNode" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 281.0
offset_right = 486.0
offset_bottom = 406.0
mouse_filter = 1
position_offset = Vector2(296, 281)

[connection signal="connection_from_empty" from="." to="." method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="." to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="copy_nodes_request" from="." to="." method="_on_GraphEdit_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_GraphEdit_duplicate_nodes_request"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="_on_GraphEdit_paste_nodes_request"]
